Nav-bar changes so that when the screen is smaller the layout is changed to avoid elements going out of the screen

--- a/src/Chirp.Web/Pages/Shared/_Nav.cshtml
+++ b/src/Chirp.Web/Pages/Shared/_Nav.cshtml
@@ -40,6 +40,10 @@
                     <img src="/assets/arrow.png" class="arrow" id="left" />
                 </button>
             </a>
+        }else{
+             <button class="nav-arrow" id = "notActive">
+                    <img src="/assets/arrow.png" class="arrow" id="left" />
+            </button>
         }
 
         <!-- Defines the 'pagelist' which will function as a way to navigate
@@ -106,6 +110,10 @@
                     <img src="/assets/arrow.png" class="arrow" id="right" />
                 </button>
             </a>
+        } else{
+            <button class="nav-arrow" id = "notActive">
+                    <img src="/assets/arrow.png" class="arrow" id="right" />
+            </button>
         }
     </div>
 }
