--- a/src/Chirp.Web/Pages/Shared/_Cheep.cshtml
+++ b/src/Chirp.Web/Pages/Shared/_Cheep.cshtml
@@ -45,7 +45,7 @@
 
         <div class="likes">
             <p> <a href="/@Model.Id/likes">@Model.Likes</a> </p>
-            <p>@Model.Dislikes </p>
+            <p> <a href="/@Model.Id/dislikes">@Model.Dislikes</a> </p>
         </div>
 
         <script>
