Basic layout for profile details in My page

--- a/src/Chirp.Web/Pages/MyPage.cshtml
+++ b/src/Chirp.Web/Pages/MyPage.cshtml
@@ -12,8 +12,72 @@
 }
 
 @await Html.PartialAsync("_Nav")
+<div class="MyPage">
+    <div class="ProfileNavigation">
+        <div class="profilePicture">
+            <img src="/assets/PB.png" id="profilePicture" />
+        </div>
+        <div class="navigationButtons">
+            <button>
+                Profile Details
+            </button>
 
-<h2>Your private information</h2>
+            <button>
+                My Cheeps
+            </button>
+
+            <button>
+                Change Details
+            </button>
+
+            <button>
+                Forget Me
+            </button>
+
+            <button>
+                Help
+            </button>
+        </div>
+    </div>
+
+    <div class="Knowledge">
+        Email:
+        <div class="email">@author.Email </div>
+       
+        Username:
+        <div class="username"> @author.Name </div>
+        
+        Telephone:
+        <div class="telephone"> *Function not added yet</div>
+
+
+
+        <div class = "followCount">
+            <div> @Model.Following </div>
+            <div> @Model.Followed </div>
+        </div>
+        
+        <div class = "distinction" >
+            <span>Following</span>
+            <span>Followers</span>
+        </div>
+
+    </div>
+</div>
+
+<!--<h2>Your private information</h2>
+
+
+
+
+
+
+
+
+
+
+
+
 
 <div class="mypage-outer">
     <div class="mypage-Identifiers">
@@ -43,35 +107,38 @@
 </div>
 
 <h3>All your personal tweets</h3>
-@if(SignInManager.IsSignedIn(User))
+@if (SignInManager.IsSignedIn(User))
 {
     @if (Model.MyCheeps.Count > 0)
     {
         @foreach (var cheep in Model.MyCheeps)
         {
-            @await Html.PartialAsync("_Cheep", new CheepPartialView {
-                Id = cheep.Id,
-                Author= cheep.Author,
-                Body= cheep.Text,
-                Image = cheep.Image,
-                Date= cheep.Timestamp,
-                Likes = cheep.Likes,
-                Dislikes = cheep.Dislikes,
-                IsLiked = await @Model.HasLiked(User!.Identity!.Name!, cheep.Id),
-                IsDisliked = await @Model.HasDisliked(User!.Identity!.Name!, cheep.Id)
-            })
+            @await Html.PartialAsync("_Cheep", new CheepPartialView
+       {
+           Id = cheep.Id,
+           Author = cheep.Author,
+           Body = cheep.Text,
+           Image = cheep.Image,
+           Date = cheep.Timestamp,
+           Likes = cheep.Likes,
+           Dislikes = cheep.Dislikes,
+           IsLiked = await @Model.HasLiked(User!.Identity!.Name!, cheep.Id),
+           IsDisliked = await @Model.HasDisliked(User!.Identity!.Name!, cheep.Id)
+       })
         } 
-    } else
-    {
-        <em>You have no cheeps so far.</em>
     }
-} else
+    else
+    {
+                                                        <em>You have no cheeps so far.</em>
+    }
+}
+else
 {
-    <div>
-        <div class="cheep-item">
-            <p class="cheep-body"> Log in to experience new ideas on Chirp. </p>
-        </div>
-    </div>
+                            <div>
+                                <div class="cheep-item">
+                                    <p class="cheep-body"> Log in to experience new ideas on Chirp. </p>
+                                </div>
+                            </div>
 }
 
 <script>
@@ -109,3 +176,4 @@
         });
     }
 </script>
+--!>
