--- a/src/Chirp.Web/wwwroot/css/myPage.css
+++ b/src/Chirp.Web/wwwroot/css/myPage.css
@@ -1,3 +1,94 @@
+.MyPage{
+    position: relative;
+    display: inline-block;
+    background-color: #f0f0f0;
+    width: 650px;
+    height: 500px;
+    margin: 0;
+}
+
+.profilePicture{
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+    width: 100%;
+    height: 140px;
+    border-bottom-style: solid;
+    border-color:black;
+}
+#profilePicture{
+    width: 120px;
+    height: 120px;
+}
+
+.ProfileNavigation{
+    display: inline-block;
+    background-color: grey;
+    width: 200px;
+    height: 500px;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+}
+
+.navigationButtons{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 100%;
+    gap: 2px;
+}
+
+.navigationButtons button{
+    width: 100%;
+    height: 65.65px;
+}
+
+.Knowledge{
+    position: absolute;
+    background-color: transparent;
+    width: 350px;
+    height: 400px;
+    margin-left: 100px;
+    flex-direction: column;
+    top: 50%;   
+    left: 50%;
+    transform: translate(-50%, -50%);
+    gap: 100px;
+}
+
+.email, .username, .telephone{
+    background-color: rgb(186, 186, 186);
+    padding: 5px;
+    padding-left: 10px;
+    color: rgba(0, 0, 0, 0.689);
+    border-style: solid;
+    border-color: rgba(0, 0, 0, 0.504);
+    margin-bottom: 25px;
+    border-radius: 2px;
+}
+
+.followCount{
+    display: flex;
+    width: 50%;
+    justify-content: space-between;
+    justify-self: center;
+    font-size: 20px;
+}
+
+.distinction{
+    display: flex;
+    width: 210px;
+    justify-content: space-between;
+    justify-self: center;
+    font-size: 12px;
+}
+
+.distinction span{
+    width: 46px;
+}
+
 .mypage-outer {
     display: flex;
     justify-content: center;
