--- a/src/Chirp.Web/wwwroot/css/style.css
+++ b/src/Chirp.Web/wwwroot/css/style.css
@@ -151,6 +151,7 @@ h2, .name-timeline {
   border-radius: 5px;
   border-start-end-radius: 0px;
   border-end-start-radius: 0px;
+  pointer-events: none;
 }
 
 .cheep-item::after{
@@ -165,6 +166,7 @@ h2, .name-timeline {
   border-radius: 5px;
   border-end-start-radius: 0px;
   border-start-end-radius: 0px;
+  pointer-events: none;
 }
 
 .cheep-author {
