--- a/src/Chirp.Web/Pages/Public.cshtml
+++ b/src/Chirp.Web/Pages/Public.cshtml
@@ -30,21 +30,27 @@
     </div>
 </h2>
 
+<footer>
+    @await Html.PartialAsync("_Post")
+    @await Html.PartialAsync("_Search")
+</footer>
+
     @if (Model.Cheeps.Any())
     {
         @foreach (var cheep in Model.Cheeps)
         {
-            @await Html.PartialAsync("_Cheep", new CheepPartialView {
-                Id = cheep.Id,
-                Author = cheep.Author,
-                Body = cheep.Text,
-                Image = cheep.Image,
-                Date = cheep.Timestamp,
-                Likes = cheep.Likes,
-                Dislikes = cheep.Dislikes,
-                IsLiked = await @Model.HasLiked(User!.Identity!.Name!, cheep.Id),
-                IsDisliked = await @Model.HasDisliked(User!.Identity!.Name!, cheep.Id)
-            })
+            @await Html.PartialAsync("_Cheep", new CheepPartialView
+{
+    Id = cheep.Id,
+    Author = cheep.Author,
+    Body = cheep.Text,
+    Image = cheep.Image,
+    Date = cheep.Timestamp,
+    Likes = cheep.Likes,
+    Dislikes = cheep.Dislikes,
+    IsLiked = await @Model.HasLiked(User!.Identity!.Name!, cheep.Id),
+    IsDisliked = await @Model.HasDisliked(User!.Identity!.Name!, cheep.Id)
+})
         }
     }
     else
@@ -55,10 +61,10 @@
 else
 {
     <div>
-         <h2 class="name-timeline">Welcome to Chirp</h2>
-    </div>
+    <h2 class="name-timeline">Welcome to Chirp</h2>
+</div>
     <div class="cheep-item">
 
-        <p class="cheep-body" id="defaultMessage"> Log in to experience new ideas on Chirp. </p>
-    </div>
+    <p class="cheep-body" id="defaultMessage"> Log in to experience new ideas on Chirp. </p>
+</div>
 }
