Added the ability to inform telephone number (that way the settings option to provide it isn't wasted, and it's also shown in the user's MyPage)

--- a/src/Chirp.Web/Pages/MyPage.cshtml
+++ b/src/Chirp.Web/Pages/MyPage.cshtml
@@ -45,7 +45,11 @@
             <div class="username"> @author.Name </div>
 
             Telephone:
-            <div class="telephone"> *Function not added yet</div>
+            @if(@author.PhoneNumber == null){
+                <div class="telephone"> * Information not available - go to settings * </div>
+            } else{
+                <div class="telephone"> @author.PhoneNumber</div>
+            }
 
 
 
