Small text improvement

--- a/src/Chirp.Web/Pages/MyPage.cshtml
+++ b/src/Chirp.Web/Pages/MyPage.cshtml
@@ -133,7 +133,7 @@ else
                     <span>Warning: By pressing forget me - and confirming the deletion of your account - all data of your account will be lost.</span>
                     <br>
                     <br>
-                    <span> Neither you or the Chirp company will be able to retrieve the deleted data. So be absolute sure that you want to delete your account before confirming.</span>
+                    <span> Neither you or the Chirp company will be able to retrieve the deleted data. So be absolutely sure that you want to delete your account before confirming.</span>
                     <button id="forgetme" data-author="@Model.AuthorDTO.Name">Forget me!</button>
                     
                     <div class="confirmForgetMe" id="confirmForgetMe">
@@ -150,7 +150,7 @@ else
                     
                     <h4> Public timeline & Filter</h4>
                     <p> The "Public timeline" is the place where
-                        you can experience the full experience of the
+                        you can witness the full experience of the
                         Chirp! site. Here you will see all the cheeps
                         that have been cheeped on the site.
                         <br>
