fixed error, we have cheeps not tweets

--- a/src/Chirp.Web/Pages/MyPage.cshtml
+++ b/src/Chirp.Web/Pages/MyPage.cshtml
@@ -67,7 +67,7 @@
     </div>
 </div>
 
-<h3>All your personal tweets</h3>
+<h3>All your personal cheeps</h3>
 @if (SignInManager.IsSignedIn(User))
 {
     @if (Model.MyCheeps.Count > 0)
